Internal data:
* switchId
* list of portNumber+upState

Input signals:
* history
* online
* offline
* port-add
* port-del
* port-up
* port-down

Output signals:
* online
* offline
* setup-port
* remove-port
* port-up
* port-down

@startuml
title Switch FSM

legend top right
    sync-ended = [sync was successful || no attempts left]
endlegend

[*] --> INIT

INIT --> SYNC : online
INIT --> PENDING : history
INIT --> OFFLINE : offline
INIT --> DELETED : switch-remove

PENDING : enter / setup port workers
PENDING --> ONLINE : online / init ports from history
PENDING --> OFFLINE : offline
PENDING --> DELETED : switch-remove

SYNC : enter / init attempts count from config
SYNC : enter / save speaker data
SYNC : enter / [dump-generation in context] update dump-generation
SYNC : enter / create or update DB record
SYNC : enter / save features
SYNC : sync-response [!sync-ended] / process sync response
SYNC : sync-error [!sync-ended] / process error response
SYNC : sync-timeout [!sync-ended] / process timeout
SYNC : online / [dump-generation in context] update dump-generation
SYNC --> SETUP : sync-ended
SYNC -r-> OFFLINE : offline

SETUP : enter / update status in DB
SETUP : enter / emit switch online status notification
SETUP : enter / setup port FSM for NEW ports
SETUP : enter / emit online for ALL ports
SETUP : enter / emit port-del for REMOVED ports
SETUP : enter / emit port-down for DOWN ports
SETUP : enter / emit port-up for UP ports
SETUP : enter / send reroute affected flows command
SETUP --> ONLINE : next

ONLINE : port-add / setup port FSM
ONLINE : port-add / emit online for port
ONLINE : port-add / emit port-up/down
ONLINE : port-del / kill port FSM
ONLINE : port-up / proxy
ONLINE : port-down / proxy
ONLINE : online / update ports status
ONLINE : online / [dump-generation in context] update dump-generation
ONLINE --> OFFLINE : offline

OFFLINE : enter / update status in DB
OFFLINE : enter / emit offline for portAll()
OFFLINE : enter / emit switch changed notification
OFFLINE --> SYNC : online
OFFLINE --> DELETED: switch-remove

DELETED : enter / kill ports FSM
DELETED : enter / emit switch remove notification
DELETED -u-> [*]

@enduml
